fix issue with extra padding at bottom of wrapper

--- a/app/assets/stylesheets/layout.css.sass
+++ b/app/assets/stylesheets/layout.css.sass
@@ -33,7 +33,6 @@ div.action-bar
 
 
 $slate-w: 100%
-$slate-border-r: 4px
 $slate-max-w: 600px
 $slate-min-h: 50px
 
@@ -44,7 +43,6 @@ div.slate-wrapper
 	max-width: $slate-max-w
 	margin: 0 auto
 	box-shadow: $mat-shadow
-	padding-bottom: $slate-border-r
 	background-color: white
 
 
